- Edited editor.css: overflow changed from scoll to hidden; - Edited collections.mustache: minor spelling mistakes were corrected and now every deck has its own buttons for editing and learning mode. - Edited @CollectionsController: progress in visualization of the active deck's cards - Edited editor.mustache: minor additions to make @CollectionsController work for the editor

--- a/src/main/resources/static/editor.css
+++ b/src/main/resources/static/editor.css
@@ -23,7 +23,7 @@
 
 .fb-side {
     display: grid;
-    overflow: scroll;
+    overflow: hidden;
     border : solid 3px var(--darkgray);
     border-radius: 10px;
     margin: 3px;
